added traveller booking view filter with booking statuses